<resources>

    <string name="app_name">EMEL - Parking Guide</string>
    <string name="emel">EMEL</string>
    <string name="parking">Parking</string>
    <string name="guide">Guide</string>

    <!-- Drawer nav items -->
    <string name="parking_lots">Parking Lots</string>
    <string name="vehicles">My vehicles</string>
    <string name="contacts">Contact us</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="other">Other</string>

    <!-- Buttons -->
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="park_me_now">Park me now!</string>
    <string name="go_map">Set course</string>
    <string name="go_info">Parking zone information</string>
    <string name="toggle_service_stations">Service Stations</string>
    <string name="toggle_general_information">EMEL General</string>
    <string name="phone_general_information">Phone: 211163060</string>
    <string name="toggle_removed_vehicles_park">Removed Vehicles Park</string>
    <string name="toggle_removed_vehicles">Removed Vehicles</string>
    <string name="phone_removed_vehicles">Phone: 217803131</string>
    <string name="setting_A">Setting A</string>
    <string name="setting_B">Setting B</string>

    <!-- Page titles -->
    <string name="update_vehicle">Update vehicle</string>
    <string name="register_vehicle">Register vehicle</string>

    <!-- EditViews -->
    <string name="enter_brand">Brand</string>
    <string name="enter_model">Model</string>
    <string name="enter_plate">Licence plate</string>
    <string name="enter_plate_date">Date</string>

    <!-- TextViews -->
    <string name="park_closed">Closed</string>
    <string name="park_open">Open</string>
    <string name="coordinates">Coordinates</string>
    <string name="type_surface">Type: Surface</string>
    <string name="type_underground">Type: Underground</string>
    <string name="last_updated_at">Last updated at</string>
    <string name="state_full">Full</string>
    <string name="state_potentially_full">Potentially Full</string>
    <string name="state_free">Free</string>
    <string name="empty_list_text">Click the button \"+\" to register your vehicles.</string>
    <string name="service_station_A">Citizen´s Store in Saldanha\nMercado 31 de Janeiro, Rua Engenheiro Vieira da Silva\nSchedule: Mondays to Fridays from 9AM to 7PM</string>
    <string name="service_station_B">Citizen´s Store in Laranjeiras\nRua Abranches Ferrão, 10\nSchedule: Mondays to Fridays from 8:30AM to 7:30PM\nSaturdays from 9:30AM to 3PM</string>
    <string name="service_station_C">Lisbon Town Hall\'s Central Building\nCampo Grande, 25\nSchedule: Mondays to Fridays from 9AM to 7PM</string>
    <string name="general_information">Schedule: Mondays to Fridays from 8AM to 8PM\nSaturdays from 9AM to 3PM</string>
    <string name="removed_vehicles_park_A">Address: Rua Franciso Lyon de Casto</string>
    <string name="removed_vehicles_park_B">Email: parque.rebocados@emel.pt</string>
    <string name="removed_vehicles_park_C">Schedule: Everyday from 8AM to 12PM</string>
    <string name="removed_vehicles">Schedule: Mondays to Fridays from 8AM to 12PM\nSaturdays, Sundays and Holidays from 9AM to 6PM</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="filter">Filter results</string>
    <string name="apply">Apply</string>
    <string name="toggle_park_type_filter_list">Filter by type</string>
    <string name="toggle_park_availability_filter_list">Filter by availability</string>
    <string name="toggle_park_distance_filter_list">Filter by distance (EXTRA)</string>
    <string name="toggle_park_fair_filter_list">Filter by fair (EXTRA)</string>
    <string name="filter_alphabetically">Filter alphabetically</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="filter_favorites">Filter favorites</string>
    <string name="closest">Closest</string>
    <string name="furthest">Furthest</string>
    <string name="fair_green">Fair green</string>
    <string name="fair_yellow">Fair yellow</string>
    <string name="fair_red">Fair red</string>
    <string name="results">results</string>
    <string name="underground">Underground</string>
    <string name="surface">Surface</string>
    <string name="available">Open</string>
    <string name="unavailable">Closed</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="favorites">Favorites</string>
    <string name="outdatedDataTitle">Connection error</string>
    <string name="outdatedDataMessage">Could not fetch data from server. Displaying potentially outdated data.</string>
    <string name="noDataMessage">Could not fetch data from server and no data is stored locally. Check internet connection and try again.</string>
    <string name="battery_life_low">Battery life low</string>
    <string name="switch_to_dark_mode">Switch to dark mode to save battery?</string>
    <string name="OK">OK</string>
    <string name="NO">No</string>
    <string name="themes_category">Themes</string>
    <string name="setting_switch_themes_title">Switch theme automatically</string>
    <string name="setting_switch_themes_summary">Switch themes according to time of day and battery life</string>
    <string name="setting_sensor_delete_filters_title">Delete filters</string>
    <string name="setting_sensor_delete_filters_summary">Delete filters when device is shaken</string>
    <string name="list_view">List view</string>
    <string name="map_view">Map view</string>
    <string name="map_legend">Legend</string>
    <string name="you">You</string>
    <string name="data_updated_after_connection_was_lost">Connection reestablished and data updated.</string>
    <string name="filters_removed">Filters removed</string>
    <string name="check_vehicle_removed">Send text to 3838 to check if vehicle is blocked.</string>
    <string name="send_text">Send text</string>
    <string name="no_permissions">No permissions given for requested action.</string>
    <string name="distance">Distance</string>
    <string name="kilometers">Km</string>
    <string name="approaching_parking_lot">Approaching parking lot</string>
    <string name="currently_at">Currently at</string>
    <string name="km_from">Km from</string>
    <string name="set_course">Set course</string>
    <string name="channel_name">SET_COURSE_CHANNEL</string>
    <string name="channel_description">Display notification to set course to nearby parking lot</string>
    <string name="no_connection">No connection detected. Cannot load data.</string>
    <string name="type">Parking type</string>
    <string name="schedule">Schedule</string>
    <string name="observations">Observations</string>
    <string name="tariff">Tariff</string>
    <string name="prices_table">Prices table</string>
    <string name="h1">00:15</string>
    <string name="h2">00:30</string>
    <string name="h3">01:00</string>
    <string name="h4">01:30</string>
    <string name="h5">02:00</string>
    <string name="h6">02:30</string>
    <string name="h7">03:00</string>
    <string name="h8">03:00</string>
    <string name="h9">04:00</string>
    <string name="green_zone">Green zone</string>
    <string name="yellow_zone">Yellow zone</string>
    <string name="red_zone">Red zone</string>
    <string name="max_2_h">Maximum 2 hours</string>
    <string name="n_a">N/A</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>