<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_parkings_lots"
        android:icon="@drawable/ic_local_parking"
        android:title="@string/parking_lots" />

    <item
        android:id="@+id/nav_vehicles"
        android:icon="@drawable/ic_vehicle"
        android:title="@string/vehicles" />

    <item
        android:id="@+id/nav_contacts"
        android:icon="@drawable/ic_contact"
        android:title="@string/contacts" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />

    <item
        android:id="@+id/nav_quit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit" />

</menu>