<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="start"
        style="@style/TextTitleTheme"
        android:text="@string/settings" />

    <Switch
        android:id="@+id/setting_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:text="@string/setting_A"
        android:textOff="@string/off"
        android:textOn="@string/on"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        style="@style/HorizontalLineSeparatorTheme" />

    <Switch
        android:id="@+id/setting_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:text="@string/setting_B"
        android:textOff="@string/off"
        android:textOn="@string/on"/>

</LinearLayout>